--- a/init.org
+++ b/init.org
@@ -85,7 +85,7 @@ tangled, and the tangled file is compiled."
 #+end_src
 
 * Start
-
+  
 ** Early init
 All this code is taken from Sophie Bosio.
 
@@ -226,6 +226,16 @@ As stated earlier I mainly use nix on my systems, but nix on windows is somethin
         ("nongnu"       . 0)))
 #+end_src
 
+** Mac OS Environment Variables
+   [[https://github.com/purcell/exec-path-from-shell][exec-path-from-shell]] is a GNU Emacs library to ensure environment variables
+   inside Emacs look the same as in the user's shell.
+   
+   #+begin_src emacs-lisp
+   (use-package exec-path-from-shell
+     :if (memq window-system '(mac ns))
+     :config
+     (exec-path-from-shell-initialize))
+   #+end_src
 * Custom Keybindings
 ** Custom Keymap
 Keeping a custom keymap that holds all the custom bindings seemed useful. This map can be activated by using a =minor-mode= that will inhibit other =major-modes= from overriding the binds.
@@ -396,8 +406,9 @@ Instead of the startup screen, I use [[https://github.com/emacs-dashboard/emacs-
         dashboard-banner-logo-title nil
         dashboard-center-content t
         dashboard-page-separator "\n\n\n"
-        dashboard-items '((projects . 15)
-                          (recents  . 15)
+        dashboard-items '((projects  . 15)
+                          (agenda    . 7)
+                          (recents   . 15)
                           (bookmarks . 5)))
   (dashboard-setup-startup-hook))
 #+end_src
@@ -859,6 +870,15 @@ The following code is taken from Lars Tveito
    (use-package try
      :defer t)
    #+end_src
+** Rainbow Mode
+   [[https://elpa.gnu.org/packages/rainbow-mode.html][rainbow-mode]] is a minor-mode that sets the background color to strings that
+   match color names.
+
+   #+begin_src emacs-lisp
+   (use-package rainbow-mode
+     :hook
+     (org-mode  .  rainbow-mode))
+   #+end_src
 * Org
 [[https://orgmode.org/][Org mode]] is extremely nice for note-taking, and I use it nearly every day.
 
@@ -948,6 +968,150 @@ This is WIP as ox-latex isn't in Nix.
   (add-to-list 'org-file-apps '("\\.pdf\\'" . emacs)))
 #+end_src
 
+** Agenda
+   The following code is currently taken from Sophie Bosio, and I'm slowly
+   tweaking it to fit to my preferences
+
+   #+begin_src emacs-lisp
+   (setq org-agenda-files '("~/uio/semester_2/org/agenda.org")
+         org-agenda-start-on-weekday nil
+         org-agenda-block-separator  nil
+         org-agenda-remove-tags      t)
+   #+end_src
+
+*** Super Agenda
+    [[https://github.com/alphapapa/org-super-agenda][org-super-agenda]] lets you group agenda items into sections, so it’s easier
+    to navigate.
+
+   #+begin_src emacs-lisp
+   (use-package org-super-agenda
+     :after org
+     :config
+     (setq org-super-agenda-header-prefix "\n❯ ")
+     ;; Hide the thin width char glyph
+     (add-hook 'org-agenda-mode-hook
+               #'(lambda () (setq-local nobreak-char-display nil)))
+     (org-super-agenda-mode))
+   #+end_src
+
+*** Org QL
+    [[https://github.com/alphapapa/org-ql][org-ql]] is a searching tool for Org-mode, including custom query
+    languages, commands, saved searches and agenda-like views, etc.
+
+    #+begin_src emacs-lisp
+    (use-package org-ql
+      :after org
+      :config
+      (add-to-list 'org-ql-views
+                   '("Questions" :buffers-files org-agenda-files :query
+                     (and
+                      (not
+                       (done))
+                      (todo "QUESTION"))
+                     :sort
+                     (todo priority date)
+                     :super-groups org-super-agenda-groups :title "Agenda-like")))
+    #+end_src
+
+*** Agenda Views
+    #+begin_src emacs-lisp    
+    (setq org-agenda-custom-commands nil)
+
+    (defvar regular-view-groups
+      '((:name "Scheduled"
+               :scheduled t
+               :order 1)
+    	(:name "Deadlines"
+               :deadline t
+               :order 2)))
+    #+end_src
+
+    #+begin_src emacs-lisp
+    (add-to-list 'org-agenda-custom-commands
+    	         '("d" "Day View"
+    		       ((agenda "" ((org-agenda-overriding-header "Day View")
+                                (org-agenda-span 'day)
+                                (org-super-agenda-groups regular-view-groups)))
+    		        (org-ql-block '(todo "PROG") ((org-ql-block-header "\n❯ In Progress")))
+    		        (org-ql-block '(todo "NEXT") ((org-ql-block-header "\n❯ Next Up")))
+                    (org-ql-block '(todo "WAIT") ((org-ql-block-header "\n❯ Waiting")))
+    		        (org-ql-block '(priority "A") ((org-ql-block-header "\n❯ Important"))))))
+
+
+    (add-to-list 'org-agenda-custom-commands
+    		     '("e" "Three-Day View"
+                   ((agenda "" ((org-agenda-span 3)
+                                (org-agenda-start-on-weekday nil)
+                                (org-deadline-warning-days 0))))))
+    #+end_src
+
+*** Displaying Scheduled and Deadline Items
+    #+begin_src emacs-lisp
+    (setq org-agenda-skip-deadline-if-done  t
+          org-agenda-skip-scheduled-if-done t)
+    (setq org-agenda-deadline-leaders '("Deadline:  " "In %2d d.: " "%2d d. ago: "))
+    #+end_src
+    
+*** Keybindings
+    Wow, very nice, very amazing
+    
+    #+begin_src emacs-lisp
+    (define-key custom-bindings-map (kbd "C-c a") 'org-agenda)
+    #+end_src
+** Tasks
+*** Task Priorities
+    Sometimes 3 isn't enough, so giga biga boom, now we have 5.
+    
+    #+begin_src emacs-lisp
+    (setq org-lowest-priority  ?F) ;; Gives us priorities A through F
+    (setq org-default-priority ?E) ;; If an item has no priority, it is considered [#E].
+
+    (setq org-priority-faces
+          '((65 . "#ffadad")
+            (66 . "#ffd6a5")
+            (67 . "#fdffb6")
+            (68 . "#a0c4ff")
+            (69 . "#bdb2ff")
+            (70 . "#ffc6ff")))   
+    #+end_src
+
+*** Custom TODO States
+    Expanding the list of default states helps me with organizing the agenda.
+
+    #+begin_src emacs-lisp
+    (setq org-todo-keywords
+      '((sequence
+         ;; Needs further action
+		 "TODO(t)" "INNLEVERING(i)" "OBLIG(o)" "EKSAMEN(e)" "BEDPRESS(b)"
+		 "|"
+         ;; Needs no action currently
+		 "DONE(d)")))
+    #+end_src
+
+*** Mark as done
+    The following code snippet is taken from Sophie Bosio
+
+    #+begin_src emacs-lisp
+    (defun org-mark-as-done ()
+      (interactive)
+      (save-excursion
+        (org-back-to-heading t) ;; Make sure command works even if point is
+                                ;; below target heading
+        (cond ((looking-at "\*+ TODO")
+               (org-todo "DONE"))
+    		  ((looking-at "\*+ INNLEVERING")
+               (org-todo "DONE"))
+              ((looking-at "\*+ OBLIG")
+               (org-todo "DONE"))
+    		  ((looking-at "\*+ EKSAMEN")
+               (org-todo "DONE"))
+    		  ((looking-at "\*+ BEDPRESS")
+               (org-todo "DONE"))
+              (t (message "Undefined TODO state.")))))
+
+    (define-key custom-bindings-map (kbd "C-c d") 'org-mark-as-done)
+    #+end_src
+    
 * Programming
 ** Direnv
 I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the direnv tool to determine per-directory/project environment variables and then set those environment variables on a per-buffer basis.
